[workspace]
package.edition = "2021"
resolver = "2"
members = [
  "crates/*",
  # Servers
  "server/*",
  # Utils
  "macros/*",
  # Cli Tools
  "tools/*",
]

[workspace.dependencies]
# Local Dependencies
primitives = { path = "crates/primitives" }
tq-network = { path = "crates/network" }
tq-serde = { path = "crates/serde" }
tq-math = { path = "crates/math" }
tq-crypto = { path = "crates/crypto" }
tq-codec = { path = "crates/codec" }
derive-packetid = { path = "macros/derive-packetid" }
derive-packethandler = { path = "macros/derive-packethandler" }


thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
bytes = "1.1"
async-trait = "0.1"
tracing = "0.1"
dotenvy = "0.15"
once_cell = "1.4"
encoding = "0.2"
bitflags = "2.3"
argh = "0.1"
tokio-stream = "0.1.8"
parking_lot = "0.12.1"
rand = "0.8"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
num_enum = { version = "0.5", default-features = false }

[workspace.dependencies.tokio]
version = "1.21.2"
default-features = false

[workspace.dependencies.sqlx]
default-features = false
version = "0.7.1"

[profile.dev]
split-debuginfo = 'packed'
