[workspace]
package.edition = "2021"
resolver = "2"
members = [
  "crates/*",
  # Servers
  "server/*",
  # Utils
  "macros/*",
  # Cli Tools
  "tools/*",
]

[workspace.dependencies]
# Local Dependencies
primitives = { path = "crates/primitives" }
tq-network = { path = "crates/network" }
tq-serde = { path = "crates/serde" }
tq-math = { path = "crates/math" }
tq-crypto = { path = "crates/crypto" }
tq-codec = { path = "crates/codec" }
tq-db = { path = "crates/db" }

derive-packetid = { path = "macros/derive-packetid" }
derive-packethandler = { path = "macros/derive-packethandler" }

# Servers & Libs
auth = { path = "server/auth" }
game = { path = "server/game" }

futures = { version = "0.3", default-features = false }
thiserror = "1.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
bytes = "1.1"
async-trait = "0.1"
tracing = "0.1"
dotenvy = "0.15"
once_cell = "1.4"
bitflags = "2.4"
argh = "0.1"
tokio-stream = "0.1.8"
parking_lot = { version = "0.12.1", default-features = false, features = [] }
rand = "0.8"
arc-swap = { version = "1.6", features = ["weak"] }
atomic = "0.6"
bytemuck = { version = "1.13", features = ["derive"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
num_enum = { version = "0.6", default-features = false }
bcrypt = "0.15"

[workspace.dependencies.tokio]
version = "1.21.2"
default-features = false

[workspace.dependencies.sqlx]
default-features = false
version = "0.7.1"

[profile.dev]
split-debuginfo = 'packed'
