[package]
name = "auth-server"
version = "0.1.0"
authors = ["Shady Khalifa <shekohex@gmail.com>"]
edition = "2018"

[dependencies]
futures-util = { version = "0.3" }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
bytes = "0.5"
network = { path = "../network" }
tq-serde = { path = "../tq-serde" }
async-trait = "0.1"
async-ctrlc = "1.2"
tracing = "0.1"
tracing-futures = "0.2"
tracing-subscriber = { version = "0.2", default-features = false, features = ["env-filter", "ansi", "fmt", "chrono", "smallvec"] }
# Runtime
smol = "0.4"
