[package]
name = "game-server"
version = "0.1.0"
authors = ["Shady Khalifa <shekohex@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
bytes = "0.5"
network = { path = "../network" }
tq-serde = { path = "../tq-serde" }
async-trait = "0.1"
tracing = "0.1"
tracing-futures = "0.2"
tracing-subscriber = { version = "0.2", default-features = false, features = ["env-filter", "ansi", "fmt", "chrono", "smallvec"] }
uptime_lib = "0.2"
dotenv = "0.15"

# Utils
[dependencies.num_enum]
version = "0.5.1"
default-features = false

# Runtime
[dependencies.tokio]
version = "0.2"
default-features = false
features = ["rt-threaded", "macros", "signal"]
