[package]
name = "network"
version = "0.1.0"
authors = ["Shady Khalifa <shekohex@gmail.com>"]
edition = "2018"

[dependencies]
thiserror = "1.0"
serde = "1.0"
bytes = "0.5"
tq-serde = { path = "../tq-serde" }
tq-codec = { path = "../tq-codec" }
crypto = { path = "../crypto" }
async-trait = "0.1"
tracing = "0.1"
tracing-futures = "0.2"
fastrand = "1.3.4"

[dependencies.tokio]
version = "0.2"
default-features = false
features = ["rt-core", "io-util", "net", "stream", "sync", "macros"]

