[package]
name = "tq-codec"
version = "0.1.0"
authors = ["Shady Khalifa <shekohex@gmail.com>"]
edition = "2018"

[dependencies]
bytes = "0.5"
tq-crypto = { path = "../crypto" }
pretty-hex = "0.2"
tracing = "0.1"
tracing-futures = "0.2"

[dependencies.tokio]
version = "0.2"
default-features = false
features = ["io-util", "stream"]
