[package]
name = "tq-codec"
version = "0.1.0"
authors = ["Shady Khalifa <shekohex@gmail.com>"]
edition = "2018"

[dependencies]
bytes = "1.1"
tq-crypto = { path = "../crypto" }
pretty-hex = "0.3"
tracing = "0.1"
tracing-futures = "0.2"
tokio-stream = { version = "0.1.8", features = ["io-util"] }
tokio = { version = "1.17", default-features = false, features = ["io-util"] }
