[package]
name = "tq-network"
version = "0.1.0"
authors = ["Shady Khalifa <shekohex@gmail.com>"]
edition = "2018"

[dependencies]
thiserror = "1.0"
serde = "1.0"
bytes = "0.5"
tq-serde = { path = "../serde" }
tq-codec = { path = "../codec" }
tq-crypto = { path = "../crypto" }
async-trait = "0.1"
tracing = "0.1"
tracing-futures = "0.2"
async-channel = "1.4"

# macros
derive-packetid = { path = "../../macros/derive-packetid" }
derive-packethandler = { path = "../../macros/derive-packethandler" }

[dependencies.tokio]
version = "0.2"
default-features = false
features = ["rt-core", "io-util", "net", "macros", "stream"]

