[package]
name = "tq-network"
version = "0.1.0"
authors = ["Shady Khalifa <shekohex@gmail.com>"]
edition = "2018"

[dependencies]
thiserror = "1.0"
serde = "1.0"
bytes = "1.1"
tq-serde = { path = "../serde" }
tq-codec = { path = "../codec" }
tq-crypto = { path = "../crypto" }
async-trait = "0.1"
tracing = "0.1"
tracing-futures = "0.2"
tokio-stream = { version = "0.1.8", features = ["io-util", "net"] }

# macros
derive-packetid = { path = "../../macros/derive-packetid" }
derive-packethandler = { path = "../../macros/derive-packethandler" }

[dependencies.tokio]
version = "1.17"
default-features = false
features = ["rt-multi-thread", "io-util", "net", "sync"]
