[package]
name = "tq-codec"
version = "0.1.0"
authors = ["Shady Khalifa <dev@shadykhalifa.me>"]
edition.workspace = true

[dependencies]
bytes.workspace = true
tq-crypto.workspace = true
tracing.workspace = true
tokio-stream = { workspace = true, features = ["io-util"] }
tokio = { workspace = true, default-features = false, features = ["io-util"] }
pretty-hex = "0.4"
