[package]
name = "tq-db"
version = "0.1.0"
authors = ["Shady Khalifa <dev@shadykhalifa.me>"]
edition.workspace = true

[dependencies]
bcrypt = "0.13"
thiserror.workspace = true

# Database
[dependencies.sqlx]
workspace = true
default-features = false
features = ["runtime-tokio-rustls", "sqlite", "macros"]
