[package]
name = "tq-db"
version = "0.1.0"
authors = ["Shady Khalifa <dev@shadykhalifa.me>"]
edition.workspace = true

[dependencies]
bcrypt.workspace = true
thiserror.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
futures.workspace = true
rkyv = { workspace = true, default-features = false, features = ["alloc", "size_32"] }

# Database
[dependencies.sqlx]
workspace = true
default-features = false
optional = true
features = ["sqlite", "macros"]

[features]
default = ["sqlx"]
sqlx = ["dep:sqlx"]
