[package]
name = "tq-io"
version = "0.1.0"
edition.workspace = true

[dependencies]
tq-externalities.workspace = true


[dependencies.sqlx]
default-features = false
workspace = true
features = ["any"]


[dev-dependencies.sqlx]
default-features = false
workspace = true
features = ["runtime-tokio", "sqlite", "any"]

[dev-dependencies.tokio]
workspace = true
default-features = false
features = ["rt-multi-thread", "macros", "test-util"]

[features]
default = []
std = [
  "tq-externalities/std",
]
