[package]
name = "tq-network"
version = "0.1.0"
authors = ["Shady Khalifa <dev@shadykhalifa.me>"]
edition.workspace = true

[dependencies]
thiserror.workspace = true
serde.workspace = true
bytes.workspace = true
tq-serde.workspace = true
tq-codec.workspace = true
tq-crypto.workspace = true
async-trait.workspace = true
tracing.workspace = true
tokio-stream = { workspace = true, features = ["io-util", "net"] }

# macros
derive-packetid.workspace = true
derive-packethandler.workspace = true

[dependencies.tokio]
workspace = true
default-features = false
features = ["rt-multi-thread", "io-util", "net", "sync"]
