[package]
name = "primitives"
version = "0.1.0"
authors = ["Shady Khalifa <dev@shadykhalifa.me>"]
edition.workspace = true

[dependencies]
num-traits = { version = "0.2", default-features = false }
bytemuck = { workspace = true, default-features = false }

[features]
default = ["std"]
std = ["num-traits/std"]
