[package]
name = "msg-account"
version = "0.1.0"
edition.workspace = true

[dependencies]
tq-serde.workspace = true
tq-codec.workspace = true
tq-crypto.workspace = true
tq-network.workspace = true
tq-bindings.workspace = true
tq-db = { workspace = true, default-features = false }


serde.workspace = true
bytes.workspace = true
tracing.workspace = true
thiserror.workspace = true


msg-connect-ex.workspace = true
msg-transfer.workspace = true

[build-dependencies]
tq-wasm-builder.workspace = true

[features]
default = ["std"]
std = [
  "tq-serde/std",
  "tq-codec/std",
  "tq-crypto/std",
  "tq-network/std",
  "tq-bindings/std",

  "tracing/std",

  "msg-connect-ex/std",
  "msg-transfer/std",
]
