[package]
name = "msg-connect"
version = "0.1.0"
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
tq-serde.workspace = true
tq-network.workspace = true
tq-bindings.workspace = true

serde.workspace = true
bytes.workspace = true
tracing.workspace = true
tracing-wasm.workspace = true

[features]
default = []
std = ["tq-serde/std", "tq-network/std", "tq-bindings/std", "tracing-wasm/std"]

