[package]
name = "msg-connect"
version = "0.1.0"
edition.workspace = true

[dependencies]
tq-serde.workspace = true
tq-network.workspace = true
tq-bindings.workspace = true

serde.workspace = true
bytes.workspace = true
thiserror.workspace = true
tracing.workspace = true

[build-dependencies]
tq-wasm-builder.workspace = true

[features]
default = ["std"]
std = ["tq-serde/std", "tq-network/std", "tq-bindings/std"]

