[package]
name = "scripting-modules"
version = "0.1.0"
authors = ["Shady Khalifa <shekohex@gmail.com>"]
edition = "2018"

[dependencies]
runestick = "0.6"
bytes = { version = "0.5.6", optional = true }



[dependencies.tokio]
version = "0.2"
default-features = false
optional = true

[features]
fs = ["tokio", "tokio/fs"]
