[package]
name = "auth"
version = "0.1.0"
authors = ["Shady Khalifa <dev@shadykhalifa.me>"]
edition.workspace = true

[[bin]]
name = "auth-server"
path = "src/main.rs"

[lib]
name = "auth"
path = "src/lib.rs"

[dependencies]
thiserror.workspace = true
serde.workspace = true
bytes.workspace = true
tq-network = { workspace = true, features = ["std"] }
tq-serde = { workspace = true, features = ["std"] }
tq-db.workspace = true
tq-server.workspace = true
async-trait.workspace = true
tracing.workspace = true
dotenvy.workspace = true
once_cell.workspace = true
tokio-stream.workspace = true
num_enum = { workspace = true, default-features = false }

[dependencies.tracing-subscriber]
version = "0.3"
default-features = false
features = ["env-filter", "ansi", "fmt", "smallvec"]

# Runtime
[dependencies.tokio]
workspace = true
default-features = false
features = ["rt-multi-thread", "macros", "signal"]

# Database
[dependencies.sqlx]
workspace = true
default-features = false
features = ["runtime-tokio-rustls", "sqlite", "macros"]
