[package]
name = "game-server"
version = "0.1.0"
authors = ["Shady Khalifa <dev@shadykhalifa.me>"]
edition.workspace = true


[dependencies]
thiserror.workspace = true
serde = { workspace = true, features = ["derive"] }
bytes.workspace = true
tq-network.workspace = true
tq-serde.workspace = true
tq-math.workspace = true
primitives.workspace = true
async-trait.workspace = true
tracing.workspace = true
dotenvy.workspace = true
once_cell.workspace = true
tokio-stream.workspace = true
rand.workspace = true
chrono.workspace = true
futures.workspace = true

encoding = "0.2"
bitflags = "2.3"
argh = "0.1"

# Utils
num_enum = { workspace = true, default-features = false }

[dependencies.tracing-subscriber]
version = "0.3"
default-features = false
features = ["env-filter", "ansi", "fmt", "smallvec"]

# Runtime
[dependencies.tokio]
workspace = true
default-features = false
features = ["rt-multi-thread", "macros", "signal", "sync"]

# Database
[dependencies.sqlx]
workspace = true
default-features = false
features = ["runtime-tokio-rustls", "sqlite", "time"]
