[package]
name = "game"
version = "0.1.0"
authors = ["Shady Khalifa <dev@shadykhalifa.me>"]
edition.workspace = true


[[bin]]
name = "game-server"
path = "src/main.rs"

[lib]
name = "game"
path = "src/lib.rs"

[dependencies]
thiserror.workspace = true
serde.workspace = true
bytes.workspace = true
tq-network = { workspace = true, features = ["std"] }
tq-serde = { workspace = true, features = ["std"] }
tq-math.workspace = true
tq-db.workspace = true
tq-server.workspace = true
primitives.workspace = true
async-trait.workspace = true
tracing.workspace = true
dotenvy.workspace = true
tokio-stream.workspace = true
rand.workspace = true
chrono.workspace = true
futures.workspace = true
arc-swap.workspace = true
atomic.workspace = true
parking_lot.workspace = true

bitflags = { workspace = true, features = ["serde"] }
argh = "0.1"

# Utils
num_enum = { workspace = true, default-features = false }

[dependencies.tracing-subscriber]
version = "0.3"
default-features = false
features = ["env-filter", "ansi", "fmt", "smallvec"]

# Debugging
[dependencies.console-subscriber]
version = "0.2"
optional = true
default-features = false
features = ["env-filter", "parking_lot"]

# Runtime
[dependencies.tokio]
workspace = true
default-features = false
features = ["rt-multi-thread", "macros", "signal", "sync", "parking_lot", "tracing"]

# Database
[dependencies.sqlx]
workspace = true
default-features = false
features = ["runtime-tokio-rustls", "sqlite", "time"]

[dev-dependencies.sqlx]
workspace = true
default-features = false
features = ["runtime-tokio-rustls", "sqlite", "time", "migrate"]

[features]
default = []
console = ["dep:console-subscriber"]
